--- a/report.tex
+++ b/report.tex
@@ -5,23 +5,23 @@
 \usepackage{wrapfig}
 \usepackage[top=1in, bottom=1in, left=1.9in, right=1.25in]{geometry}
 \begin{document}
-\begin{CJK}{GBK}{hei} % gbsn: ËÎÌå¼ò»¯×Ö£»gkai ¿¬Ìå¼ò»¯×Ö;  bsmi ·±ÌåËÎÊé£»bkai ·±Ìå¿¬Êé
+\begin{CJK}{GBK}{hei} % gbsn: å®‹ä½“ç®€åŒ–å­—ï¼›gkai æ¥·ä½“ç®€åŒ–å­—;  bsmi ç¹ä½“å®‹ä¹¦ï¼›bkai ç¹ä½“æ¥·ä¹¦
 
 \begin{wrapfigure}{L}[0.2\textwidth]{0.8\textwidth}
 
   \includegraphics[width=0.8\textwidth]{report.jpg}
 
 \end{wrapfigure}
-\texttt{   ×¨Òµ£º¹¤¿Æ$($ĞÅÏ¢$)$ }\par
-\texttt{   ĞÕÃû£ºÕÂÃô½İ }\par
-\texttt{   Ñ§ºÅ£º$3130102283 $}\par
-\texttt{   ÈÕÆÚ£º$2014-04-03 $}\par
-\texttt{   µØµã£º¶«$4-321$ }\par
+\texttt{ Â  ä¸“ä¸šï¼š**$($**$)$ }\par
+\texttt{ Â  å§“åï¼š*** }\par
+\texttt{ Â  å­¦å·ï¼š$*** $}\par
+\texttt{   æ—¥æœŸï¼š$2014-04-03 $}\par
+\texttt{   åœ°ç‚¹ï¼šä¸œ$4-321$ }\par
 \begin{flushleft}
-¿Î³ÌÃû³Æ£ºÒôÏì¼¼ÊõÓë¼ÒÍ¥Ó°Ôº Ö¸µ¼ÀÏÊ¦£ºÒôÏì¼¼ÊõÓë¼ÒÍ¥Ó°Ôº  ³É¼¨£º
+è¯¾ç¨‹åç§°ï¼šéŸ³å“æŠ€æœ¯ä¸å®¶åº­å½±é™¢ æŒ‡å¯¼è€å¸ˆï¼šéŸ³å“æŠ€æœ¯ä¸å®¶åº­å½±é™¢  æˆç»©ï¼š
 \end{flushleft}
 \begin{flushleft}
-ÊµÑéÃû³Æ£ºÒôÏì¼¼ÊõÓë¼ÒÍ¥Ó°Ôº ÊµÑéÀàĞÍ£ºÒôÏì¼¼ÊõÓë¼ÒÍ¥Ó°Ôº Í¬×éÑ§ÉúĞÕÃû£º
+å®éªŒåç§°ï¼šéŸ³å“æŠ€æœ¯ä¸å®¶åº­å½±é™¢ å®éªŒç±»å‹ï¼šéŸ³å“æŠ€æœ¯ä¸å®¶åº­å½±é™¢ åŒç»„å­¦ç”Ÿå§“åï¼š
 \end{flushleft}
 \end{CJK}
 \end{document}
